<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resistencia"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Spinner
                android:id="@+id/funcionesResist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/imgRA"
                android:layout_width="290dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:src="@mipmap/resistencia2f"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/imgRA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/resistencia2d"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/RT"
                android:layout_width="267dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:src="@mipmap/resistenciaf"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/RT2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/resistenciad"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <EditText
                android:id="@+id/resistenciaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaResult"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal" />
            <EditText
                android:id="@+id/resistividadET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaRho"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/longitudET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaL"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/areaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaA"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/resistenciaFET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaF"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/resistencia0ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistencia0"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/resistenciaAlpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaAlpha"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/resistenciaTempIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaTemp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/resistenciaTempFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintResistenciaFin"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:inputType="numberDecimal"/>
            <TextView
                android:id="@+id/resultTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif-monospace"
                android:textColor="@color/Main"
                android:textSize="40dp"/>
            <Button
                android:id="@+id/btnCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ButtonCalc"
                android:layout_gravity="right"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>










</LinearLayout>